--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -1,2 +1,3 @@
 @use 'node_modules/bootstrap/scss/bootstrap.scss';
-@use '../scss/partials/header';
+@use '../scss/partials/_header';
+@use '../scss/partials/_main';
