--- a/src/assets/scss/partials/_main.scss
+++ b/src/assets/scss/partials/_main.scss
@@ -1,6 +1,10 @@
 main {
    background-color: orange;
 
+   img {
+      min-height: 350px;
+   }
+
    .form-select {
       width: 200px;
    }
@@ -9,5 +13,18 @@ main {
       background-color: orange;
       border: none;
       min-height: 100%;
+   }
+}
+
+@media screen and (max-width: 575.98px) {
+   main {
+      .card {
+         width: 65%;
+         margin: auto;
+      }
+
+      img {
+         min-height: 450px;
+      }
    }
 }
